# hslogger

./: .appveyor.yml  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  COPYRIGHT  INSTALL  LICENSE  Makefile  MissingH.cabal  Setup.hs  cabal.haskell-ci  hslogger.cabal  hslogger_1.0.10.orig.tar.gz.delta  hslogger_1.0.10.orig.tar.gz.id  hslogger_1.0.8.orig.tar.gz.delta  hslogger_1.0.8.orig.tar.gz.id  hslogger_1.0.9.orig.tar.gz.delta  hslogger_1.0.9.orig.tar.gz.id  stack.yaml
.github/workflows/: haskell-ci.yml  stack.yml
debian/: README.source  changelog  control  copyright  libghc-hslogger-dev.install  rules  watch
src/: UTF8.hs
src/System/: Log.hs
src/System/Log/: Formatter.hs  Handler.hs  Logger.hs
src/System/Log/Handler/: Growl.hs  Log4jXML.hs  Rotating.hs  Simple.hs  Syslog.hs
testsrc/: Tests.hs  runtests.hs
