cabal-version: 1.12
build-type: Simple
name: hslogger
version: 1.3.1.0
x-revision: 6

maintainer: https://github.com/haskell-hvr/hslogger
author: John Goerzen
copyright: Copyright (c) 2004-2018 John Goerzen
                   , (c) 2019      Herbert Valerio Riedel
license: BSD3
license-file: LICENSE
homepage: https://github.com/haskell-hvr/hslogger/wiki
bug-reports: https://github.com/haskell-hvr/hslogger/issues
category: Interfaces
synopsis: Versatile logging framework
description:
 @hslogger@ is a logging framework for Haskell, roughly similar
 to [Python's logging module](https://docs.python.org/2/library/logging.html).
 .
 @hslogger@ lets each log message have a priority and source be associated
 with it.  The programmer can then define global handlers that route
 or filter messages based on the priority and source.  @hslogger@ also
 has a [Syslog](https://tools.ietf.org/html/rfc5424) handler built in.

extra-source-files:
    LICENSE
    CHANGELOG.md
    contrib/java/build.xml
    contrib/java/hslogger4j.jar
    contrib/java/hslogger4j-plugins.xml
    contrib/java/org/haskell/hslogger/HsloggerLevel.java
    contrib/java/org/haskell/hslogger/LogFileXMLReceiver.java
    contrib/java/org/haskell/hslogger/XMLDecoder.java
    testsrc/Tests.hs
    testsrc/runtests.hs

tested-with:
  GHC == 9.4.1
  GHC == 9.2.4
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  GHC == 7.8.4
  GHC == 7.6.3
  GHC == 7.4.2
  GHC == 7.2.2
  GHC == 7.0.4

source-repository head
  type: git
  location: http://github.com/haskell-hvr/hslogger.git

flag network--GT-3_0_0
  description: [network](http://hackage.haskell.org/package/network) ≥ 3.0.0
  default: True
  manual: False

library
    hs-source-dirs: src
    exposed-modules:
        System.Log
        System.Log.Handler
        System.Log.Formatter
        System.Log.Handler.Simple
        System.Log.Handler.Syslog
        System.Log.Handler.Growl
        System.Log.Handler.Log4jXML
        System.Log.Logger
    other-modules:
        UTF8

    default-language: Haskell2010
    other-extensions: CPP ExistentialQuantification DeriveDataTypeable

    build-depends:
        base       >= 4.3 && < 4.18
      , bytestring >= 0.9 && < 0.12
      , containers >= 0.4 && < 0.7
      , deepseq    >= 1.1 && < 1.5
      , time       >= 1.2 && < 1.13
      , old-locale >= 1.0 && < 1.1

    if flag(network--GT-3_0_0)
      build-depends: network-bsd >= 2.8.1 && <2.9,
                     network >= 3.0 && <3.2
    else
      build-depends: network >= 2.6 && <2.9

    if !os(windows)
      Build-Depends: unix >= 2.4.2 && < 2.9

    if !impl(ghc >= 7.6)
      build-depends: ghc-prim

test-suite runtests
    type: exitcode-stdio-1.0

    hs-source-dirs: testsrc
    main-is: runtests.hs
    other-modules: Tests

    default-language: Haskell2010
    build-depends:
        base
      , HUnit == 1.3.* || == 1.6.*
      , hslogger
