cabal-version: 1.18
build-type: Simple
name: hslogger
version: 1.3.2.0

maintainer: https://github.com/haskell-hvr/hslogger
author: John Goerzen
copyright: Copyright (c) 2004-2018 John Goerzen
                   , (c) 2019      Herbert Valerio Riedel
license: BSD3
license-file: LICENSE
homepage: https://github.com/haskell-hvr/hslogger/wiki
bug-reports: https://github.com/haskell-hvr/hslogger/issues
category: Interfaces
synopsis: Versatile logging framework
description:
 @hslogger@ is a logging framework for Haskell, roughly similar
 to [Python's logging module](https://docs.python.org/2/library/logging.html).
 .
 @hslogger@ lets each log message have a priority and source be associated
 with it.  The programmer can then define global handlers that route
 or filter messages based on the priority and source.  @hslogger@ also
 has a [Syslog](https://tools.ietf.org/html/rfc5424) handler built in.

extra-doc-files:
    LICENSE
    CHANGELOG.md

extra-source-files:
    contrib/java/build.xml
    contrib/java/hslogger4j.jar
    contrib/java/hslogger4j-plugins.xml
    contrib/java/org/haskell/hslogger/HsloggerLevel.java
    contrib/java/org/haskell/hslogger/LogFileXMLReceiver.java
    contrib/java/org/haskell/hslogger/XMLDecoder.java
    testsrc/Tests.hs
    testsrc/runtests.hs

tested-with:
  GHC == 9.14.1
  GHC == 9.12.2
  GHC == 9.10.2
  GHC == 9.8.4
  GHC == 9.6.7
  GHC == 9.4.8
  GHC == 9.2.8
  GHC == 9.0.2
  GHC == 8.10.7
  GHC == 8.8.4
  GHC == 8.6.5
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2

source-repository head
  type: git
  location: http://github.com/haskell-hvr/hslogger.git

library
    hs-source-dirs: src
    exposed-modules:
        System.Log
        System.Log.Handler
        System.Log.Formatter
        System.Log.Handler.Simple
        System.Log.Handler.Syslog
        System.Log.Handler.Growl
        System.Log.Handler.Log4jXML
        System.Log.Logger
    other-modules:
        UTF8

    default-language: Haskell2010
    other-extensions: CPP ExistentialQuantification DeriveDataTypeable

    build-depends:
      -- Lower bounds are at least the ones from LTS 7.24 (GHC 8.0.1)
        base         >= 4.9       && < 5
      , bytestring   >= 0.10.8.1  && < 0.13
      , containers   >= 0.5.7.1   && < 1
      , deepseq      >= 1.4.2.0   && < 1.6
      , time         >= 1.6.0.1   && < 2
      , network-bsd  >= 2.8.1     && <2.9
      , network      >= 3.0       && <3.3

    if !os(windows)
      Build-Depends: unix >= 2.7.2.0 && < 2.9

test-suite runtests
    type: exitcode-stdio-1.0

    hs-source-dirs: testsrc
    main-is: runtests.hs
    other-modules: Tests

    default-language: Haskell2010
    build-depends:
        base
      , HUnit == 1.6.*
      , hslogger
